# MulleObjCInetFoundation

./: .gitignore  .touch  .travis.yml  CMakeDependencies.txt  CMakeLists.txt  CMakeSourcesAndHeaders.txt  MulleObjCInetFoundation.code-workspace  MulleObjCInetFoundation.sublime-project  MulleObjCLoader+InMulleObjCInetFoundation.m  MulleObjCLoader+InetFoundation.h  MulleObjCLoader+InetFoundation.m  MulleObjCLoader+MulleObjCInetFoundation.h  README.md  RELEASENOTES.md  clib.json  package.json
.bootstrap/: repositories
.github/workflows/: semgrep.yml
.mulle-env/etc/: optionaltool
.mulle-env/share/: environment-project.sh  environment-share.sh
.mulle-sourcetree/etc/: config
.mulle/etc/env/: environment-host-ci-prerelease.sh  environment-project.sh
.mulle/etc/project/: version-info.sh
.mulle/etc/sourcetree/: config
.mulle/share/sde/: extension
.mulle/share/sourcetree/: config
assets/dox/: TOC.md
cmake/: Headers.cmake  HeadersAndSources.cmake  HeadersAndSources.cmake.old  _Dependencies.cmake  _Headers.cmake  _Sources.cmake
cmake/reflect/: _Dependencies.cmake  _Headers.cmake  _Sources.cmake
cmake/share/: CreateLoaderIncObjC.cmake  Environment.cmake  ExecutableObjC.cmake  LinkManifestC.cmake  OptimizedLinkObjC.cmake  StandaloneC.cmake  StartupC.cmake
cola/: description.md.bud  properties.plist
src/: MulleObjCInetFoundation-standalone.m  MulleObjCInetFoundation.c  MulleObjCInetFoundation.h  MulleObjCInetFoundation.m  MulleObjCInetFoundationStandalone.m  MulleObjCLoader+InetFoundation.h  MulleObjCLoader+InetFoundation.m  MulleObjCLoader+MulleObjCInetFoundation.h  MulleObjCLoader+MulleObjCInetFoundation.m  NSCharacterSet+MulleURL.h  NSCharacterSet+MulleURL.m  NSHost.h  NSHost.m  NSMutableCharacterSet+MulleURL.h  NSMutableCharacterSet+MulleURL.m  NSString+HTML.h  NSString+HTML.m  NSString+MulleURL.h  NSString+MulleURL.m  NSURL+File.m  NSURL+HTTP.m  NSURL.h  NSURL.m  _MulleObjCInetFoundation-import-private.h  _MulleObjCInetFoundation-import.h  _MulleObjCInetFoundation-include-private.h  _MulleObjCInetFoundation-include.h  dependencies.inc  import.h  include-private.h  include.h  objc-loader.inc
src/generic/: import-private.h  include.h
src/reflect/: _MulleObjCInetFoundation-export.h  _MulleObjCInetFoundation-import-private.h  _MulleObjCInetFoundation-import.h  _MulleObjCInetFoundation-include-private.h  _MulleObjCInetFoundation-include.h  _MulleObjCInetFoundation-provide.h  _MulleObjCInetFoundation-versioncheck.h  objc-loader.inc
templates/: .travis.yml.scion  README.md.scion
test/: import.h  include.h
test/.mulle-env/share/: environment-project.sh
test/.mulle-sde/share/: mulle-test
test/.mulle-sourcetree/etc/: config
test/.mulle/etc/env/: environment-host-ci-prerelease.sh  environment-host-travis-ci-prerelease.sh
test/.mulle/etc/sourcetree/: config
test/.mulle/share/sde/: mulle-test
test/.mulle/share/sourcetree/: config
test/10_generated/: test-NSHost.m  test-NSURL.m
test/NSMutableCharacterSet/: c_non_percent_escape_character_set-203caf71.m  c_non_percent_escape_character_set-203caf71.stdout  c_urlfragment_allowed_character_se-03e4b234.m  c_urlhost_allowed_character_set.m  c_urlpassword_allowed_character_se-06fd7b04.m  c_urlpath_allowed_character_set.m  c_urlquery_allowed_character_set.m  c_urlscheme_allowed_character_set.m  c_urluser_allowed_character_set.m
test/NSURL/: base_url_mix.m  base_url_mix.stdout  base_url_mix_file.m  base_url_mix_file.stdout  empty-base.m  empty-base.stdout  empty.m  empty.stdout  even-simpler.m  even-simpler.stdout  file.m  file.stdout  mailto.m  mailto.stdout  noleak.m  nsurl.m  nsurl.stdout  nsurl_leak.m  nsurl_leak.stdout  pipefile.m  pipefile.stdout  simple-base.m  simple-base.stdout  simple.m  simple.stdout
tests/: build-test.sh  run-test.sh
tests/NSURL/: pipefile.m
tests/examples/: complex.m  complex2.m  simple.m
